--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
   <section class="container">
-    <h1>Meu Timer</h1>
+    <h1>TIMER</h1>
     <div class="relogio">00:00:00</div>
     <p>
     <button class="start">Iniciar</button>
